CN-315,  Few mobile responsive minor bugs has been fixed like alignment, error-messages position, complexities scenarios alignment

--- a/src/client/app/cnext/framework/basic-job-information/basic-job-information.component.scss
+++ b/src/client/app/cnext/framework/basic-job-information/basic-job-information.component.scss
@@ -33,7 +33,7 @@ $light-blue: #00aed5;
 @media only screen and (max-width: 767px) {
   .compact-view {
     p {
-      width: 100%;
+      width: 50%;
       padding: 0;
       margin-bottom: 10px;
     }
