--- a/src/client/app/cnext/framework/job-poster/job-poster.component.scss
+++ b/src/client/app/cnext/framework/job-poster/job-poster.component.scss
@@ -60,4 +60,13 @@ $profile-background: #f2f2f2;
   .job-poster {
     margin: 0;
   }
+
+  .button-group {
+    padding: 5px;
+    text-align: left;
+
+    .btn {
+      margin: 15px 10px 0 0;
+    }
+  }
 }
