--- a/src/client/app/cnext/framework/profile-description/profile-description.component.scss
+++ b/src/client/app/cnext/framework/profile-description/profile-description.component.scss
@@ -41,4 +41,9 @@ h4 {
       font-size: 16px;
     }
   }
+
+  .col-sm-3,
+  .col-sm-9 {
+    padding: 0;
+  }
 }
