--- a/src/client/css/common.scss
+++ b/src/client/css/common.scss
@@ -475,6 +475,14 @@ control-messages {
   }
 }
 
+.job-info {
+  control-messages {
+    div {
+      padding: 0 0 0 15px;
+    }
+  }
+}
+
 .contact {
   control-messages {
     div {
